# knowledge-lab

./: README.md
BTech Big Data & Artificial Intelligence/Projeto Integrador II-B/src/: fictitious_tca_diagnosis.csv  main.py  pyproject.toml
Python/Bootcamp Jornada de Dados/: README.md
Python/Bootcamp Jornada de Dados/aula 01/: README.md  desafio.py
Python/Bootcamp Jornada de Dados/aula 01  - Tipos Primitivos/: README.md
Python/Bootcamp Jornada de Dados/aula 01  - Tipos Primitivos/desafio/: README.md  kpi.py
Python/Bootcamp Jornada de Dados/aula 01/desafio/: README.md
Python/Bootcamp Jornada de Dados/aula 02 - Tipos de Erros/: README.md
Python/Bootcamp Jornada de Dados/aula 02 - Tipos de Erros/desafio/: README.md  kpi.py
Python/Bootcamp Jornada de Dados/aula 02 - Tipos de Erros/exercicios/: README.md  (+5 more)
Python/Bootcamp Jornada de Dados/aula 02 - Tipos de Erros/exercicios básicos/: README.md  exercicio02.py  exercicio03.py  exercicio05.py  exercicio06.py  exercicio08.py  exercicio09.py  exercicio11.py  exercicio12.py  exercicio13.py  exercicio14.py  exercicio15.py  exercicio16.py  exercicio17.py  exercicio18.py  exercicio19.py
Python/Bootcamp Jornada de Dados/aula 02 - Tipos de Erros/exercicios com tipo de erro/: README.md  exercicio21.py  exercicio22.py  exercicio23.py  exercicio24.py  exercicio25.py
Python/Bootcamp Jornada de Dados/aula 03 - Controle de Fluxo/: README.md
Python/Bootcamp Jornada de Dados/aula 04 - Tipos Complexos/: README.md  main.py
Python/Bootcamp Jornada de Dados/aula 05 - Funções e Estrutura de Dados/: README.md  exemplo.py
(+42 files in other folders)
